# note-player

./: .gitignore  DEBUGGING.md  README.md  bot.py  pyproject.toml  user_settings.toml
src/: hold_detector.py  lookahead_controller.py  note_queue.py  settings.py  sustain_controller.py
